Prevent username from wrapping due to dashes

--- a/preview-src/index.css
+++ b/preview-src/index.css
@@ -252,6 +252,7 @@ body .comment-container .review-comment-header > a,
 body .commit .commit-message > a,
 body .merged .merged-message > a {
 	margin-right: 4px;
+	white-space: nowrap;
 }
 
 body .comment-container .comment-body, .review-body {
